--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "rai",
     "description": "Request-Answer-Interface for generating text based command servers (SMTP, POP etc)",
-    "version": "0.1.12",
+    "version": "0.2.0",
     "author" : "Andris Reinman",
     "maintainers":[
         {
@@ -14,7 +14,7 @@
         "url" : "http://github.com/andris9/rai.git"
     },
     "scripts":{
-        "test": "nodeunit test"
+        "test": "mocha test"
     },
     "main" : "./lib/rai",
     "licenses" : [
@@ -24,7 +24,7 @@
         }
     ],
     "devDependencies": {
-        "nodeunit": "*"
+        "mocha": "*"
     },
     "engines": ["node >=0.4.0"],
     "keywords": ["servers", "text-based"]
